# tg_mini_app_rep

./: README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  calendar.py  dashboard.py  dev.py  events.py  pets.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  enums.py  event.py  pet.py  user.py
backend/app/schemas/: auth.py  calendar.py  dashboard.py  event.py  pet.py
backend/app/scripts/: seed.py
backend/app/services/: auth.py  calendar.py  dashboard.py  events.py  pets.py
backend/migrations/: env.py
backend/migrations/versions/: 3705d80f57e9_init_tables.py  41f4dcf20271_add_enums.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: providers.tsx  router.tsx
frontend/src/components/: PetCard.tsx  UpcomingEvents.tsx
frontend/src/entities/calendar/: api.ts
frontend/src/entities/dashboard/: api.ts  userDashboard.ts
frontend/src/entities/event/: api.ts
frontend/src/entities/pet/: api.ts
frontend/src/features/auth/: api.ts
frontend/src/features/dashboard/: store.ts
frontend/src/pages/: CalendarPage.tsx  HealthFeaturesPage.tsx  HomePage.tsx  PassportEditPage.tsx  PassportPage.tsx  ProcedurePage.tsx  ProfilePage.tsx  calendar-page.css  health-features-page.css  home-page.css  passport-edit-page.css  passport-page.css  procedure-page.css
frontend/src/shared/api/: client.ts
(+52 files in other folders)
